--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bulma": "^0.8.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-magnifier": "^3.0.4",
     "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
