--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-magnifier": "^3.0.4",
+    "react-map-gl": "^5.2.1",
     "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
