--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "react-starterpack",
+  "name": "react-artjourney",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --mode-development"
+    "dev": "webpack-dev-server --mode-development",
+    "build": "webpack -p",
+    "start": "node index.js"
   },
   "dependencies": {
     "axios": "^0.19.2",
     "bulma": "^0.8.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-magnifier": "^3.0.4",
